# tapeback

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  echo_vault.sh  flake.nix  pyproject.toml  tapeback.sh
.claude/: settings.json
.github/workflows/: ci.yml  publish.yml
packaging/: PKGBUILD  demo.tape
packaging/echo-vault-diarize/: PKGBUILD  echo-vault-diarize.install
packaging/echo-vault-llm/: PKGBUILD  echo-vault-llm.install
packaging/tapeback-diarize/: PKGBUILD  tapeback-diarize.install
packaging/tapeback-llm/: PKGBUILD  tapeback-llm.install
packaging/tapeback-tray/: PKGBUILD  tapeback-tray.install
scripts/: aur-publish.sh  release.sh
src/meetrec/: audio.py  cli.py  diarizer.py  formatter.py  recorder.py  settings.py  summarizer.py  transcriber.py  vault.py
src/tapeback/: audio.py  channel.py  cli.py  const.py  diarizer.py  formatter.py  models.py  pipeline.py  recorder.py  settings.py  summarizer.py  transcriber.py  tray.py  vault.py
tests/: fixtures.py  test_audio.py  test_cli.py  test_diarizer.py  test_e2e_quality.py  test_formatter.py  test_integration.py  test_live.py  test_recorder.py  test_settings.py  test_summarizer.py  test_transcriber.py
tests/regressions/: test_diarizer_regressions.py  test_pipeline_regressions.py  test_recorder_regressions.py  test_transcriber_regressions.py
