[project]
name = "echo-vault"
version = "0.2.0"
description = "Local meeting audio recorder with transcription for Obsidian"
readme = "README.md"
authors = [{ name = "Yast", email = "yastcher@gmail.com" }]
requires-python = ">=3.14"
dependencies = [
    "faster-whisper>=1.0.0",
    "pydantic-settings>=2.0.0",
    "click>=8.0.0",
    "pyannote-audio>=3.1.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
]

[project.scripts]
meetrec = "meetrec.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meetrec"]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pytest>=9.0.0",
    "pytest-cov>=6.0.0",
]

[tool.ruff]
target-version = "py314"
line-length = 100
exclude = [
    ".claude",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-local-folder = ["meetrec", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=meetrec --cov-report=term-missing"

[tool.coverage.run]
source = ["src/meetrec"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "if TYPE_CHECKING:",
    "pragma: no cover",
]
