[project]
name = "tapeback"
version = "0.9.2"
description = "Local meeting recorder with transcription and speaker diarization for Obsidian"
readme = "README.md"
authors = [{ name = "Yast", email = "yastcher@gmail.com" }]
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
keywords = ["meeting", "transcription", "whisper", "diarization", "obsidian", "pipewire"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "faster-whisper>=1.0.0,<2",
    "pydantic-settings>=2.0.0,<3",
    "click>=8.0.0,<9",
]

[project.optional-dependencies]
diarize = [
    "pyannote-audio>=3.1.0,<5",
    "torch>=2.0.0,<3",
    "torchaudio>=2.0.0,<3",
]
llm = [
    "anthropic>=0.40.0,<1",
    "openai>=1.50.0,<3",
]
tray = [
    "pystray>=0.19.0,<1",
    "Pillow>=10.0.0,<13",
]

[project.scripts]
tapeback = "tapeback.cli:cli"

[project.urls]
Homepage = "https://github.com/yastcher/tapeback"
Repository = "https://github.com/yastcher/tapeback"
Issues = "https://github.com/yastcher/tapeback/issues"
Changelog = "https://github.com/yastcher/tapeback/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tapeback"]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pytest>=9.0.0",
    "pytest-cov>=6.0.0",
    "ty>=0.0.1a7",
    "pyannote-audio>=3.1.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [
    ".claude",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "G", "PLC", "PLR", "SIM", "S", "RUF"]
ignore = [
    "S603",    # subprocess calls are safe (list-based, no shell)
    "S607",    # partial executable paths (ffmpeg, parecord) are intentional
    "S108",    # /tmp/tapeback is intentional, secured with 0700 permissions
]
fixable = ["ALL"]

[tool.ruff.lint.pylint]
max-args = 6  # Settings + 5 domain args is a common shape in this codebase

[tool.ruff.lint.per-file-ignores]
# Tests: pytest idioms (bare assert, fake tokens, magic values in assertions).
"tests/**/*.py" = ["S101", "S105", "S106", "PLR2004"]
# Lazy imports to keep CLI startup (--help, status) free of ~10s ML model load
# (faster_whisper/torch are pulled in transitively from pipeline/live/tray).
"src/tapeback/cli.py" = ["PLC0415"]
# pyannote.audio + torch are `[diarize]` extras — must import inside functions
# so users without the extra don't get ImportError on module load.
"src/tapeback/diarizer.py" = ["PLC0415"]
# anthropic/openai are `[llm]` extras — same lazy-import rationale as diarizer.
"src/tapeback/summarizer.py" = ["PLC0415"]

[tool.ruff.lint.isort]
known-local-folder = ["tapeback", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=tapeback --cov-report=term-missing"

[tool.coverage.run]
source = ["src/tapeback"]
omit = ["src/tapeback/tray.py"]  # GUI module, requires X display — tested locally only

[tool.coverage.report]
show_missing = true
fail_under = 85
exclude_lines = [
    "if TYPE_CHECKING:",
    "pragma: no cover",
]

[tool.ty.environment]
python-version = "3.13"
# Project root needed for `from tests.fixtures import ...`
# src/ needed for `from tapeback import ...`
extra-paths = [".", "src"]
